--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="contact-info d-flex align-items-center">
       <i class="bi bi-envelope d-flex align-items-center"><span>skateski@naver.com</span></i>
       <i class="bi bi-phone d-flex align-items-center ms-4"><span>02-2265-2483</span></i>
-      <i class="bi bi-phone-fill d-flex align-items-center ms-4"><span> FEX: 02-2265-2484</span></i>
+<!--      <i class="bi bi-phone-fill d-flex align-items-center ms-4"><span> FEX: 02-2265-2484</span></i>-->
     </div>
   </div>
 </section>
